[gd_scene load_steps=7 format=3 uid="uid://dx7jgkuntpghv"]

[ext_resource type="Script" path="res://Script/UI.gd" id="1_rsuim"]
[ext_resource type="Texture2D" uid="uid://btomq8x00mwet" path="res://Assets/Scudo.png" id="2_ltgxy"]
[ext_resource type="Texture2D" uid="uid://boh4pqrqrgdrm" path="res://Assets/Chiave/Chiave.png" id="3_ahyv1"]

[sub_resource type="Animation" id="Animation_ny0om"]
resource_name = "MostraMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 0.705882)]
}

[sub_resource type="Animation" id="Animation_ix6rk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jceka"]
_data = {
"MostraMenu": SubResource("Animation_ny0om"),
"RESET": SubResource("Animation_ix6rk")
}

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rsuim")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="MarginContainerScudi" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -225.0
offset_bottom = 72.0
grow_horizontal = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainerScudi"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainerScudi/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ltgxy")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainerScudi/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ltgxy")
stretch_mode = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainerScudi/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ltgxy")
stretch_mode = 2

[node name="MarginContainerChiavi" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 79.0
offset_bottom = 48.0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainerChiavi"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IconChiave" type="TextureRect" parent="MarginContainerChiavi/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ahyv1")
stretch_mode = 5

[node name="NumChiavi" type="Label" parent="MarginContainerChiavi/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Menu" type="ColorRect" parent="."]
light_mask = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="TransitionMenu" type="AnimationPlayer" parent="Menu"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_jceka")
}
